--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       href="https://mmwebfonts.comquas.com/fonts/?font=pyidaungsu"
       rel="stylesheet"
     />
-    <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/js/fontawesome.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script src="https://d3js.org/d3.v3.js"></script>
 
     <script src="https://d3js.org/d3-axis.v1.min.js"></script>
