Moved inline general purpose functions to base.js

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="https://d3js.org/d3-shape.v1.min.js"></script>
     <script class="internal" src="variables.js"></script>
     <script class="internal" src="geoVariables.js"></script>
+    <script class="internal" src="base.js"></script>
     <script class="internal" src="radarChart.js"></script>
     <script class="internal" src="barChart.js"></script>
     <script class="internal" src="unit1.js"></script>
@@ -304,7 +305,7 @@
       /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
       /* @@@@ General purpose functions here @@@@ */
       /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-
+      /*
       // Simple function to switch 2020-2019 datasets
       function switch_dataset(year) {
         if (year == "2019") {
@@ -353,8 +354,8 @@
           }
         }
         return returnList;
-      }
+      } */
     </script>
-    <!-- #TODO Move this inline JavaScript into its own file -->
+    <!--     #TODO Move this inline JavaScript into its own file -->
   </body>
 </html>
