Align year selectors

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       />
     </div>
 
-    <div class="unit donors">
+    <div class="unit donors"></div>
+    <div class="years">
       <p>
-        You can view Data from 2019 here.
         <button
           id="button2019"
           type="button"
